# Polypheny-CPP-Driver

./: .gitignore  README.md  doxide.yaml  meson.build  mkdocs.yaml
docs/: index.md
docs/Connection/: index.md
docs/Connection/Connection/: index.md
docs/Connection/ConnectionProperties/: index.md
examples/: ExampleConnectionDefaults.cpp  ExampleConnectionProperties.cpp  ExampleDocument.cpp  ExampleGraph.cpp  ExampleRelational.cpp  ExampleSimpleClient.cpp  meson.build
include/: BigDecimal.h  CallbackQueue.h  Connection.cpp  Connection.h  ConnectionProperties.h  Cursor.h  Document.h  DocumentResult.h  GraphResult.h  Interval.h  PolyphenyCPPDriver.h  PrismInterfaceClient.h  RelationalResult.h  Result.h  ScalarResult.h  TypedValue.h  library.h
prism/: compile.py
src/: BigDecimal.cpp  CallbackQueue.cpp  CallbackQueue.h  CallbackQueue.tpp  Connection.cpp  ConnectionClosedError.cpp  ConnectionClosedError.h  ConnectionProperties.cpp  Cursor.cpp  Cursor.h  Document.cpp  DocumentResult.cpp  GraphResult.cpp  Interval.cpp  NativeType.cpp  PlainTransport.cpp  PlainTransport.h  PrismInterfaceClient.cpp  PrismInterfaceClient.h  ProtoUtils.cpp  ProtoUtils.h  RelationalColumnMetadata.cpp  RelationalColumnMetadata.h  RelationalMetadata.cpp  RelationalMetadata.h  RelationalResult.cpp  Result.cpp  Row.cpp  Row.h  ScalarResult.cpp  ServerError.cpp  ServerError.h  TransportUtils.cpp  TransportUtils.h  TypedValue.cpp
src/connection/: CallbackQueue.h  Connection.cpp  Connection.h  ConnectionProperties.cpp  ConnectionProperties.h  Cursor.cpp  Cursor.h  PrismInterfaceClient.cpp  PrismInterfaceClient.h  Statement.cpp  Statement.h
src/results/: DocumentResult.cpp  DocumentResult.h  Edge.cpp  Edge.h  GraphElement.cpp  GraphElement.h  GraphElementType.h  GraphResult.cpp  GraphResult.h  Node.cpp  Node.h  Path.cpp  Path.h  RelationalColumnMetadata.cpp  RelationalColumnMetadata.h  RelationalMetadata.h  RelationalResult.cpp  RelationalResult.h  Result.h  Row.cpp  Row.h  ScalarResult.cpp  ScalarResult.h
src/streaming/: BinaryInputStream.cpp  BinaryInputStream.h  BinaryInputStreamBuffer.cpp  BinaryInputStreamBuffer.h  BinaryPrismOutputStream.cpp  BinaryPrismOutputStream.h  FilePrismOutputStream.cpp  FilePrismOutputStream.h  PrismOutputStream.cpp  PrismOutputStream.h  StreamingIndex.cpp  StreamingIndex.h  StringPrismInputStream.cpp  StringPrismInputStream.h  StringPrismOutputStream.cpp  StringPrismOutputStream.h
src/transport/: PlainTCPTransport.cpp  PlainTCPTransport.h  PlainTcpTransport.cpp  PlainTcpTransport.h  PlainTransport.cpp  PlainTransport.h  SecureTcpTransport.cpp  SecureTcpTransport.h  SocketTransport.cpp  SocketTransport.h  Transport.h  UnixTransport.cpp  UnixTransport.h
src/types/: BigDecimal.cpp  Document.h  File.cpp  File.h  Interval.cpp  Interval.h  NativeType.h  TypedValue.cpp  TypedValue.h
src/utils/: ProtoUtils.cpp  ProtoUtils.h  TypedValueUtils.cpp  TypedValueUtils.h
subprojects/: polypheny_prism_api.wrap  protobuf.wrap
tests/: BigDecimalTest.cpp  CallbackQueueTest.cpp  ConnectionClosedErrorTest.cpp  ConnectionPropertiesTest.cpp  DocumentTest.cpp  Init.cpp  IntervalTest.cpp  ProtoUtilsTest.cpp  StreamingTest.cpp  TypedValueTest.cpp
