polypheny_inc = include_directories('../include')

example_connection_defaults = executable(
    'ExampleConnectionDefaults',
    sources : 'ExampleConnectionDefaults.cpp',
    link_with : polypheny_cpp_driver_lib,
    dependencies: polypheny_cpp_driver_dep,
    install : true
)

example_connection_properties = executable(
    'ExampleConnectionProperties',
    sources : 'ExampleConnectionProperties.cpp',
    link_with : polypheny_cpp_driver_lib,
    dependencies: polypheny_cpp_driver_dep,
    install : true
)

example_relational = executable(
    'ExampleRelational',
    sources : 'ExampleRelational.cpp',
    link_with : polypheny_cpp_driver_lib,
    dependencies: polypheny_cpp_driver_dep,
    install : true
)

example_document = executable(
    'ExampleDocument',
    sources : 'ExampleDocument.cpp',
    link_with : polypheny_cpp_driver_lib,
    dependencies: polypheny_cpp_driver_dep,
    install : true
)

example_graph = executable(
    'ExampleGraph',
    sources : 'ExampleGraph.cpp',
    link_with : polypheny_cpp_driver_lib,
    dependencies: polypheny_cpp_driver_dep,
    install : true
)

example_simple_client = executable(
    'ExampleSimpleClient',
    sources : 'ExampleSimpleClient.cpp',
    link_with : polypheny_cpp_driver_lib,
    dependencies: polypheny_cpp_driver_dep,
    install : true
)
